# hippo_memory

./: .gitignore  .hippo.toml  AGENTS.md  README.md  install-codex-hippo.ps1  install-reasonix-hippo.ps1  pyproject.toml  uninstall-reasonix-hippo.ps1
benchmarks/: __init__.py
docs/: CODEX_APP_MEMORY_DEPLOYMENT_AND_EVALUATION.md  PROJECT_REPORT.md
examples/: retrieval_eval.jsonl  sample_chat.txt  sample_memories.json  windows_demo.ps1
hippocampus_memory/: __init__.py  __main__.py  api.py  ast_indexer.py  callback.py  change_planner.py  cli.py  code_graph.py  code_intelligence.py  code_map.py  codegraph_bootstrap.py  codex_workspace.py  config.py  conflict_detector.py  consolidator.py  context_bundle.py  context_utils.py  db.py  deploy.py  embedding.py  evaluator.py  file_filters.py  git_utils.py  llm_summarizer.py  lsp_diagnostics.py  mcp_server.py  memory_policy.py  memory_writer.py  models.py  packer.py  project_indexer.py  project_profile.py  project_resolver.py  python_lsp.py  ranker.py  recall_policy.py  report.py  retriever.py  runner.py  schemas.py  (+7 more)
scripts/: safe_apply_patch.py
tests/: cognitive_drive_test.py  conftest.py  decision_graph_test.py  memory_lifecycle_test.py  policy_stability_test.py  regression_test.py  scheduler_stability_test.py  semantic_memory_test.py  stress_test.py  system_integrity_test.py  test_85_percent_features.py  test_ab_memory_matrix.py  test_auto_policies.py  test_cli.py  test_cli_feature_matrix.py  test_codegraph_bootstrap.py  test_codex_clean_install_acceptance.py  test_codex_cli_probe_acceptance.py  test_codex_only_runtime.py  (+29 more)
(+48 files in other folders)
