[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hippocampus-memory"
version = "0.1.0"
description = "Local-first external memory system for AI agents."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "hippocampus-memory contributors" }]
dependencies = [
    "fastapi>=0.110",
    "pydantic>=2",
    "typer>=0.12",
    "uvicorn>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.5",
]
semantic = [
    "sentence-transformers>=3",
]
chroma = [
    "chromadb>=0.5",
]
quality = [
    "jieba>=0.42.1",
    "rapidfuzz>=3",
]
lsp = [
    "basedpyright>=1.20",
]
tokens = [
    "tiktoken>=0.7",
]
all = [
    "basedpyright>=1.20",
    "chromadb>=0.5",
    "jieba>=0.42.1",
    "rapidfuzz>=3",
    "sentence-transformers>=3",
    "tiktoken>=0.7",
]

[project.scripts]
hippo = "hippocampus_memory.cli:app"

[tool.setuptools.packages.find]
include = ["hippocampus_memory*"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    "benchmarks/coding_tasks/runs",
    "benchmarks/long_text_tasks/runs",
    "output",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
